--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "@reduxjs/toolkit": "^2.1.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.10.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.0"
+    "vite": "^5.2.7"
   }
 }
