--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.0",
     "sonner": "^1.4.0"
   },
