--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.0",
-    "sonner": "^1.4.0"
+    "socket.io-client": "^4.7.5",
+    "sonner": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
