--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 NODE_ENV = development
 
-MONGODB_URI = mongodb+srv://thinhnguyen12072002:12072002@thinh127.rpasajg.mongodb.net/taskDB?retryWrites=true&w=majority&appName=Thinh127
+MONGODB_URI = mongodb+srv://TooniK:Nguyen2310@cluster0.4gk5hd1.mongodb.net/taskDB?retryWrites=true&w=majority
 
 JWT_SECRET = 120720002
 
